fix form collapse on wider screens

--- a/src/components/generator/form/index.css
+++ b/src/components/generator/form/index.css
@@ -21,8 +21,12 @@
 
 }
 
-.pane-expanded {
+.pane-visible {
   bottom: 0;
+}
+
+.pane-displayed {
+  display: flex;
 }
 
 /* SCHEME SEED COLOR */
